# nonograms-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  demo.tape  nonograms.py  pyproject.toml
nonograms_tui/: __init__.py  app.py  board.py  music.py  puzzles.py  rules.py  solver.py  tui.tcss
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py  solver_test.py
